test/parser/leading-zero.delta
// RUN: not %delta -parse %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: numbers cannot start with 0[0-9], use 0o prefix for octal literal
    var i = 0666;
}
